--- a/finimalism10.11-black.css
+++ b/finimalism10.11-black.css
@@ -80,6 +80,7 @@
   opacity: 1;
   z-index: -1;
   animation: fadeContainer 5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+  margin-top: 0;
 }
 
 .detailPageSecondaryContainer {
