--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Geom:ital,wght@0,300..900;1,300..900&display=swap');
 body {
-  font-family: "Lexend Deca", sans-serif;
+  font-family: "Geom", sans-serif;
   font-size: 12pt;
 }
 
