--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Geom:ital,wght@0,300..900;1,300..900&display=swap');
 body {
   font-family: "Geom", sans-serif;
@@ -1646,7 +1645,7 @@ button.is-emby-button emby-button {
   -webkit-line-clamp: 3;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-height: 4.5em;
+  max-height: 4.6em;
 }
 
 #childrenContent .listItem-content .listItemBodyText {
@@ -1834,12 +1833,12 @@ button.is-emby-button emby-button {
 .layout-tv .itemName.infoText.subtitle.focuscontainer-x {
   text-align: center;
   position: fixed;
-  top: 12.7em;
-  left: 5em;
-  width: 22em;
+  top: 10.3em;
+  left: 19.2em;
+  width: 28.3em !important;
   filter: drop-shadow(-1px 1px 2px black);
   line-height: unset;
-  transform: translateY(-50%);
+  transform: translateY(-50%) translateX(-50%);
   font-weight: 600;
 }
 
@@ -3181,12 +3180,15 @@ a[href*="shokoanime.com"] {
   border: solid 1px #fff;
   background: transparent !important;
   color:#8564ff !important;
-  width:auto;
-  height: auto;
-  transform: scale(1);
   padding-left: 0.5em;
   padding-right: 0.5em;
   box-shadow: 0px 0px 5px #fff9;
+}
+
+.layout-tv #itemDetailPage .button-flat.btnPlay.detailButton.emby-button.show-focus:focus {
+  border: solid 1px #fff;
+  background: #fff !important;
+  color:#8564ff !important;
 }
 
 .layout-tv .card.show-focus:focus {
@@ -3233,7 +3235,7 @@ a[href*="shokoanime.com"] {
 }
 
 .layout-tv #childrenContent .listItemBody {
-  width: 200%;
+  width: 400em;
 }
 
 .layout-desktop .listItem-content,
@@ -3388,6 +3390,13 @@ a[href*="shokoanime.com"] {
   [dir="ltr"] .padded-right {
     padding-right: max(env(safe-area-inset-right),1.3%);
   }
+}
+
+.layout-tv #childrenContent .itemsContainer.padded-right.itemsContainer-tv.vertical-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 70vw;
+  gap: 1%;
 }
 
 .layout-desktop .itemDetailPage:has(.itemName.parentNameLast) #itemBackdrop,
@@ -3647,7 +3656,7 @@ a[href*="shokoanime.com"] {
 }
 
 .layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button.show-focus[data-type="Season"]) .infoWrapper .nameContainer .parentName.focuscontainer-x {
-  width: 27em;
+  width: 18.3em;
   font-weight: 600;
 }
 
@@ -4001,6 +4010,10 @@ a[href*="shokoanime.com"] {
   margin-left: 17vw !important;
 }
 
+.layout-tv #itemDetailPage .itemDetailsGroup .detailsGroupItem .content {
+  margin-left: 1em;
+}
+
 /* 720p resolution */
 @media (max-width: 1280px) and (max-height: 720px) {
   .layout-desktop body, .layout-tv body {
@@ -4015,15 +4028,15 @@ a[href*="shokoanime.com"] {
   }
   .itemDetailsGroup .label::before,
   .trackSelections .selectLabel::before {
-    font-size: 18pt;
-    line-height: 27px;
+    font-size: 27pt;
+    line-height: 35px;
   }
 }
 
 /* 1440p TV resolution */
 @media (min-width: 2400px) {
   .layout-tv body {
-    font-size: 110% !important;
+    font-size: 130% !important;
   }
 }
 
@@ -4037,15 +4050,15 @@ a[href*="shokoanime.com"] {
   }
   .itemDetailsGroup .label::before,
   .trackSelections .selectLabel::before {
-    font-size: 22pt;
-    line-height: 39px;
+    font-size: 32pt;
+    line-height: 46px;
   }
 }
 
 /* 4k TV resolution */
 @media (min-width: 3000px) {
   .layout-tv body {
-    font-size: 150% !important;
+    font-size: 173% !important;
   }
   .spotlightiframe {
     margin-top: -3.5em !important;
